--- a/Web.GraphQL/wwwroot/index.html
+++ b/Web.GraphQL/wwwroot/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>GraphiQL Webpack Example!</title>
-  </head>
+  <script defer src="bundle.js"></script></head>
 
   <body>
     <style>
@@ -22,5 +22,5 @@
       }
     </style>
     <div id="root"></div>
-  <script src="bundle.js"></script></body>
+  </body>
 </html>
