updated wwwroot files

--- a/Web.GraphQL/wwwroot/index.html
+++ b/Web.GraphQL/wwwroot/index.html
@@ -1,25 +1,26 @@
-﻿<!DOCTYPE html>
+  
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>GraphiQL Webpack Example!</title>
-    <script defer src="bundle.js"></script>
-</head>
+  <script defer src="bundle.js"></script></head>
 
-<body>
+  <body>
     <style>
-        body {
-            padding: 0;
-            margin: 0;
-            min-height: 100vh;
-        }
-
-        #root {
-            height: 100vh;
-        }
+      body {
+        padding: 0;
+        margin: 0;
+        min-height: 100vh;
+      }
+      #root {
+        height: 100vh;
+      }
     </style>
     <div id="root"></div>
-</body>
+  </body>
 </html>
